Reorganized js files

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   </style>
 </head>
 <body>
+  <script src="preloadCreate.js"></script>
+  <script src="spawnFlyingEnemy.js"></script>
+  <script src="spawnFlyingEnemy.js"></script>
+  <script src="collectCoin.js"></script>
   <script src="main.js"></script>
 </body>
 </html>
